--- a/src/contact/contact.html
+++ b/src/contact/contact.html
@@ -60,7 +60,7 @@
                                 <i class="form-group__bar"></i>
                             </div>
 
-                            <small class="mdc-text-white-darker">By sending us your information, you agree to Roost’s Terms of Use & Privacy Policy.</small>
+                            <small class="mdc-text-white-darker">By sending us your information, you agree to our Terms of Use &amp; Privacy Policy.</small>
 
                             <div class="m-t-30">
                                 <button type="submit" class="btn brn-sm btn-default btn-static">Send</button>
