--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <script src="js/app.min.js"></script>  
 
    <!-- Demo only -->
-        <script src="https://maps.googleapis.com/maps/api/js?callback=initMap&key=AIzaSyD_nanUpVqytOmHHfuW4htZsiLH7YUzJ1A" async></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC02bIRNy0Y8x9klbesAlmkqqUfkcgD49A"></script>
         <script src="js/demo/demo.js"></script>
         <script src="js/demo/maps/listing-detail-location-map.js"></script>
 
