--- a/src/app-header/app-header.html
+++ b/src/app-header/app-header.html
@@ -141,7 +141,7 @@
                     <li class="visible-xs visible-sm"><a class="navigation__close" data-rmd-action="navigation-close" href=""><i class="zmdi zmdi-long-arrow-right"></i></a></li>
 
                     <li class="active navigation__dropdown">
-                        <a route-href="route: home">Home</a>
+                        <a route-href="route: home" id="home-link">Home</a>
 
                         <!-- <ul class="navigation__drop-menu">
                             <li><a href="after-login.html">After Login</a></li>
@@ -162,7 +162,7 @@
                     </li> -->
 
 
-                    <li><a route-href="route: submit">Submit</a></li>
+                    <li class="navigation__dropdown"><a route-href="route: submit" id="submit-link">Submit</a></li>
 
                     <!-- <li class="navigation__dropdown">
                         <a href="mortgage.html">Mortgages</a>
@@ -184,7 +184,7 @@
                         </ul>
                     </li> -->
 
-                    <li><a route-href="route: contact">Contact</a></li>
+                    <li  class="navigation__dropdown"><a route-href="route: contact" id="contact-link">Contact</a></li>
 
                     <!-- <li class="navigation__dropdown">
                         <a href="" class="prevent-default">More</a>
