--- a/src/contact/contact.html
+++ b/src/contact/contact.html
@@ -15,17 +15,17 @@
                     <div class="col-sm-6">
                         <div class="contact__info">
                             <ul class="rmd-contact-list">
-                                <li class="rmd-contact-list__title"><i class="zmdi zmdi-home"></i>New York Office</li>
-                                <li><i class="zmdi zmdi-pin"></i>5470 Madison Street Severna Park, <br>MD 21146</li>
-                                <li><i class="zmdi zmdi-phone"></i>308-360-8938</li>
-                                <li><i class="zmdi zmdi-email"></i>new-york@Roost.estate</li>
+                                <li class="rmd-contact-list__title"><i class="zmdi zmdi-home"></i>Dubai Office</li>
+                                <li><i class="zmdi zmdi-pin"></i>230 Mira 2 Dubailand, <br>560030</li>
+                                <li><i class="zmdi zmdi-phone"></i>000-000-0000</li>
+                                <li><i class="zmdi zmdi-email"></i>contact@realty.com</li>
                             </ul>
 
                             <ul class="rmd-contact-list">
-                                <li class="rmd-contact-list__title"><i class="zmdi zmdi-home"></i>San Jose Office</li>
-                                <li><i class="zmdi zmdi-pin"></i>7094 Leeton Ridge Mountain View, <br>CA 94043</li>
-                                <li><i class="zmdi zmdi-phone"></i>702-210-6015</li>
-                                <li><i class="zmdi zmdi-email"></i>san-jose@Roost.estate</li>
+                                <li class="rmd-contact-list__title"><i class="zmdi zmdi-home"></i>UK Office</li>
+                                <li><i class="zmdi zmdi-pin"></i>7094 Blah Blah Mountain View, <br>123</li>
+                                <li><i class="zmdi zmdi-phone"></i>000-000-0000</li>
+                                <li><i class="zmdi zmdi-email"></i>info@realty.com</li>
                             </ul>
 
                             <div class="contact__social">
