--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,6 +1,6 @@
 <template>
     <section class="section">
-        <p>Place holder for the slider</p>
+        <h1>Place holder for the slider</h1>
     </section>
     <section class="section submit-ticker">
         <p>Are you looking to sell your valuable property? Realty is your destination!</p>
