--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 
    <!-- Demo only -->
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC02bIRNy0Y8x9klbesAlmkqqUfkcgD49A"></script>
-        <script src="js/demo/demo.js"></script>
-        <script src="js/demo/maps/listing-detail-location-map.js"></script>
+        <!-- <script src="js/demo/demo.js"></script> -->
+        <!-- <script src="js/demo/maps/listing-detail-location-map.js"></script> -->
 
     
 </body>
