--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,11 +1,25 @@
 <template>
-    <section class="section">
+    <div class="full-height parallax" data-parallax-bg-image="img/stock-vector-a-real-estate-agent-holding-the-document-for-the-for-sale-house-vector-flat-design-illustration-311771255.jpg"
+        data-parallax-speed="3" data-parallax-direction="down">
+        <div class="overlay"></div>
+        <div class="content" style="height: 50rem;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 white-content">
+                        <!-- <h1>PLACEHOLDER</h1>
+                        <p>PLACEHOLDER</p> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <section class="section">
         <h1>Place holder for the slider</h1>
-    </section>
+    </section> -->
     <section class="section submit-ticker">
         <p>Are you looking to sell your valuable property? Realty is your destination!</p>
 
-        <a href="submit-property.html">Submit your property now!</a>
+        <a route-href="route: submit">Submit your property now!</a>
     </section>
     <section class="section info-box">
         <div class="container">
