--- a/src/app-header/app-header.html
+++ b/src/app-header/app-header.html
@@ -202,6 +202,8 @@
                             <li><a href="empty-page.html">Empty Page</a></li>
                         </ul>
                     </li> -->
+
+                    <li  class="navigation__dropdown"><a route-href="route: faq" id="faq-link">FAQ</a></li>
                 </ul>
             </div>
         </div>
