--- a/src/faq/faq.html
+++ b/src/faq/faq.html
@@ -1,4 +1,5 @@
 <template>
+    <require from="./faq.css"></require>
     <section class="section">
         <div class="container">
             <header class="section__title">
