--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,21 +1,44 @@
 <template>
-    <div class="full-height parallax" data-parallax-bg-image="img/stock-vector-a-real-estate-agent-holding-the-document-for-the-for-sale-house-vector-flat-design-illustration-311771255.jpg"
-        data-parallax-speed="3" data-parallax-direction="down">
-        <div class="overlay"></div>
-        <div class="content" style="height: 50rem;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 white-content">
-                        <!-- <h1>PLACEHOLDER</h1>
-                        <p>PLACEHOLDER</p> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- <section class="section">
-        <h1>Place holder for the slider</h1>
-    </section> -->
+    <require from="./home.css"></require>
+
+<div class="keyart" id="nonparallax">
+</div>
+<div class="keyart" id="parallax">
+  <div class="keyart_layer parallax" id="keyart-0" data-speed="2"></div>
+  <!-- 00.0 -->
+  <div class="keyart_layer parallax" id="keyart-1" data-speed="5"></div>
+  <!-- 12.5 -->
+  <div class="keyart_layer parallax" id="keyart-2" data-speed="11"></div>
+  <!-- 25.0 -->
+  <div class="keyart_layer parallax" id="keyart-3" data-speed="16"></div>
+  <!-- 37.5 -->
+  <div class="keyart_layer parallax" id="keyart-4" data-speed="26"></div>
+  <!-- 50.0 -->
+  <div class="keyart_layer parallax" id="keyart-5" data-speed="36"></div>
+  <!-- 62.5 -->
+  <div class="keyart_layer parallax" id="keyart-6" data-speed="49"></div>
+  <!-- 75.0 -->
+  <div class="keyart_layer" id="keyart-scrim"></div>
+  <div class="keyart_layer parallax" id="keyart-7" data-speed="69"></div>
+  <!-- 87.5 -->
+  <div class="keyart_layer" id="keyart-8" data-speed="100">
+
+    <!-- login form -->
+     <div id="logo-box">
+      <h1>REALTY</h1>
+      <h2>This is a placeholder for the logo</h2>
+      <!-- <div class="m-t-1">
+        <a class="btn btn-play btn-large" title="Kursus Oversigt" href="#">Start your journey</a>
+      </div> -->
+    </div> 
+
+  </div>
+  <!-- 100. -->
+</div>
+
+<div id="maincontain">
+  <div id="main"></div>
+
     <section class="section submit-ticker">
         <p>Are you looking to sell your valuable property? Realty is your destination!</p>
 
