--- a/src/submit/submit.html
+++ b/src/submit/submit.html
@@ -1,4 +1,5 @@
-<template>
+<template>'
+    <require from="./submit.css"></require>'
     <section class="section">
         <div class="container">
             <header class="section__title">
