--- a/src/contact/contact.html
+++ b/src/contact/contact.html
@@ -1,4 +1,5 @@
 <template>
+    <!-- <require from="./contacts.css"></require> -->
     <section class="section">
         <div class="container">
             <header class="section__title">
