--- a/src/faq/faq.html
+++ b/src/faq/faq.html
@@ -14,37 +14,35 @@
                             <h2>Are there any hidden fees involved?</h2>
                         </div>
                         <div class="card__body">
-                            No. There are absolutely no fees involved in our service whatsoever and we even cover all of your legal fees.
+                            No. There are absolutely no fees involved in our service. What you see is what you pay.
                         </div>
                     </div>
 
                     <div class="card faq__item">
                         <div class="card__header">
-                            <h2>Can I meet with someone face to face?</h2>
+                            <h2>If needed, would somebody be available for a meeting?</h2>
                         </div>
                         <div class="card__body">
-                            Yes. The Property Buying Company has local and regional representatives across England &amp; Wales who are more than happy
-                            to come out and see you face to face to make an offer on your property. Call us today to arrange
-                            an appointment for one of our representatives to come out and see you.
+                            Yes. We would be more than happy to meet with you to make an offer on your property. Contact us today to arrange an appointment
+                            for one of our representatives to come out and see you.
                         </div>
                     </div>
 
                     <div class="card faq__item">
                         <div class="card__header">
-                            <h2>Does it matter if my mortgage is in arrears?</h2>
+                            <h2>Does it matter if I am behind on my mortgage payments and face the risk of repossession?</h2>
                         </div>
                         <div class="card__body">
-                            No. We have strong relationships with all major mortgage lenders and can potentially help with any situation you might have.
+                           No. Wherever possible, we will use our strong relationship with mortgage lenders to help with any situation you might have. If the property is about to be repossessed, we suggest you call us now and act sooner rather than later. 
                         </div>
                     </div>
 
                     <div class="card faq__item">
                         <div class="card__header">
-                            <h2>My property is about to be repossessed. Can you help? </h2>
+                            <h2>How do I know if I am getting a fair price for my property?</h2>
                         </div>
                         <div class="card__body">
-                            If you are about to be repossessed it’s not too late but we suggest you act sooner rather than later and give one of our
-                            advisors a call now.
+                            Fair trade is at the core of xxx. Time is also money and it must be factored in the transaction. Allow us to make an offer and find out.
                         </div>
                     </div>
 
@@ -53,40 +51,32 @@
                             <h2>How do you calculate the value of my property?</h2>
                         </div>
                         <div class="card__body">
-                            We have the most up to date and sophisticated valuation software available, which enables us to make an accurate valuation
-                            of your property. We also have extensive knowledge of local markets throughout England &amp;
-                            Wales from our experience of working in the house buying industry for the past 11 years. We also
-                            take in to consideration your views on your property and the local market.
+                            We use our collective experience of 30 years and our extensive knowledge of local markets. We use our proprietary system that provides us with the most up-to-date data to help us to offer you a fair price.
                         </div>
                     </div>
 
                     <div class="card faq__item">
                         <div class="card__header">
-                            <h2>How do I know i’m getting a fair price?</h2>
+                            <h2>How long does the entire process take?</h2>
                         </div>
                         <div class="card__body">
-
-                            The Property Buying Company prides itself on offering the fairest trade price for your property. Call us and give us a chance
-                            to prove this to you!
+                            The average time to conclude the transaction is usually 2 – 3 weeks. In some cases, we have concluded the transaction in 7 days. Having said that, xxx will work with you to complete the entire process within the timeline ideal to you. 
                         </div>
                     </div>
                     <div class="card faq__item">
                         <div class="card__header">
-                            <h2>How long does the process take?</h2>
+                            <h2>How quick will I get an offer on my property?</h2>
                         </div>
                         <div class="card__body">
-                            The Property Buying Company can complete in a timescale to suit you. We have completed on properties within 7 days however
-                            on average we usually take 2 – 3 weeks. We work with you to try achieve your ideal completion
-                            date.
+                            Less than 24hrs. Submit your property on our portal or call us on xxxx for our offer. 
                         </div>
                     </div>
                     <div class="card faq__item">
                         <div class="card__header">
-                            <h2>How quickly will I get an offer on my property?</h2>
+                            <h2>What type of properties do you buy?</h2>
                         </div>
                         <div class="card__body">
-                            A representative from The Property Buying Company will make you an offer within 24hrs. Take the next step…Call one of our
-                            representatives NOW on 0844 123456 or tap here to submit your property for a free cash offer
+                           Xxx buys the following types of property: Independent Villas, Townhouses, Apartments. Commercial property and land will be on a case by case basis. 
                         </div>
                     </div>
 
@@ -102,64 +92,15 @@
 
                     <div class="card faq__item">
                         <div class="card__header">
-                            <h2>I need to sell my property before I have to withdraw my offer. Can you help?</h2>
+                            <h2>Which areas does xxx cover?</h2>
                         </div>
                         <div class="card__body">
-                            We can help you. We are able to complete quickly allowing you to make your onward purchase.
+                            All freehold and leasehold areas in the United Arab Emirates. 
                         </div>
                     </div>
 
 
 
-                    <div class="card faq__item">
-                        <div class="card__header">
-                            <h2>My property is run down, will I still be able to sell it to you?</h2>
-                        </div>
-                        <div class="card__body">
-                            We buy any property in any condition.
-                        </div>
-                    </div>
-
-
-                    <div class="card faq__item">
-                        <div class="card__header">
-                            <h2>What type of properties do you buy?</h2>
-                        </div>
-                        <div class="card__body">
-                            The Property Buying Company will buy any of the following types of property: Detached, Semi Detached, Terrace, Bungalow, Flat, Maisonette, Cottage, Barn…. In essence we will offer on any type of property in any condition throughout England &amp; Wales. We will also consider commercial property and land.
-                        </div>
-                    </div>
-
-
-                    <div class="card faq__item">
-                        <div class="card__header">
-                            <h2>Which areas do The Property Buying Company cover?</h2>
-                        </div>
-                        <div class="card__body">
-                            AWe cover all of England &amp; Wales.
-                        </div>
-                    </div>
-
-
-                    <div class="card faq__item">
-                        <div class="card__header">
-                            <h2>How quickly will I get an offer on my property?</h2>
-                        </div>
-                        <div class="card__body">
-                            A representative from The Property Buying Company will make you an offer within 24hrs. Take the next step…Call one of our
-                            representatives NOW on 0844 123456 or tap here to submit your property for a free cash offer
-                        </div>
-                    </div>
-
-
-                    <div class="card faq__item">
-                        <div class="card__header">
-                            <h2>You state that you are a ‘Trade Buyer’ of property. What does this actually mean?</h2>
-                        </div>
-                        <div class="card__body">
-                            As we are a trade buyer of property we have different solutions for your property. We have the ability to buy your property for cash or source another cash or fund buyer for your home allowing us unprecedented flexibility as we are not controlled or restrained by banks or mortgages. We still insist upon having a professional survey, however the buying decision and price we are able to offer is firmly determined buy us and us only! Many of our competitors have their hands tied by the bank and if they are not happy, they will generally pull out of their purchase leaving vendors stuck with little or no options left. You can rely on The Property Buying Company to work with you to achieve your goals!
-                        </div>
-                    </div>
                 </div>
 
                 <div class="col-md-4 rmd-sidebar-mobile" id="write-to-us">
