--- a/src/app-footer/app-footer.html
+++ b/src/app-footer/app-footer.html
@@ -61,7 +61,7 @@
         <div class="footer__bottom">
             <div class="container">
                 <span class="footer__copyright">© Realty</span>
-                <a href="">Terms & Conditions</a>
+                <a route-href="route: tnc">Terms &amp; Conditions</a>
                 <a href="">Privacy Policy</a>
             </div>
 
