--- a/src/faq/faq.html
+++ b/src/faq/faq.html
@@ -132,7 +132,7 @@
                                 <label>Message</label>
                             </div>
 
-                            <small class="text-muted">By sending us your information, you agree to Root’s Terms of Use & Privacy Policy.</small>
+                            <small class="text-muted">By sending us your information, you agree our Terms of Use &amp; Privacy Policy.</small>
                         </div>
 
                         <div class="card__footer">
