--- a/public/src/home/home.html
+++ b/public/src/home/home.html
@@ -1,118 +1,182 @@
 <template>
     <require from="./home.css"></require>
 
-<div class="keyart" id="nonparallax">
-</div>
-<div class="keyart" id="parallax">
-  <div class="keyart_layer parallax" id="keyart-0" data-speed="2"></div>
-  <!-- 00.0 -->
-  <div class="keyart_layer parallax" id="keyart-1" data-speed="5"></div>
-  <!-- 12.5 -->
-  <div class="keyart_layer parallax" id="keyart-2" data-speed="11"></div>
-  <!-- 25.0 -->
-  <div class="keyart_layer parallax" id="keyart-3" data-speed="16"></div>
-  <!-- 37.5 -->
-  <div class="keyart_layer parallax" id="keyart-4" data-speed="26"></div>
-  <!-- 50.0 -->
-  <div class="keyart_layer parallax" id="keyart-5" data-speed="36"></div>
-  <!-- 62.5 -->
-  <div class="keyart_layer parallax" id="keyart-6" data-speed="49"></div>
-  <!-- 75.0 -->
-  <div class="keyart_layer" id="keyart-scrim"></div>
-  <div class="keyart_layer parallax" id="keyart-7" data-speed="69"></div>
-  <!-- 87.5 -->
-  <div class="keyart_layer" id="keyart-8" data-speed="100">
+    <div class="keyart" id="nonparallax">
+    </div>
+    <div class="keyart" id="parallax">
+        <div class="keyart_layer parallax" id="keyart-0" data-speed="2"></div>
+        <!-- 00.0 -->
+        <div class="keyart_layer parallax" id="keyart-1" data-speed="5"></div>
+        <!-- 12.5 -->
+        <div class="keyart_layer parallax" id="keyart-2" data-speed="11"></div>
+        <!-- 25.0 -->
+        <div class="keyart_layer parallax" id="keyart-3" data-speed="16"></div>
+        <!-- 37.5 -->
+        <div class="keyart_layer parallax" id="keyart-4" data-speed="26"></div>
+        <!-- 50.0 -->
+        <div class="keyart_layer parallax" id="keyart-5" data-speed="36"></div>
+        <!-- 62.5 -->
+        <div class="keyart_layer parallax" id="keyart-6" data-speed="49"></div>
+        <!-- 75.0 -->
+        <div class="keyart_layer" id="keyart-scrim"></div>
+        <div class="keyart_layer parallax" id="keyart-7" data-speed="69"></div>
+        <!-- 87.5 -->
+        <div class="keyart_layer" id="keyart-8" data-speed="100">
 
-    <!-- login form -->
-     <div id="logo-box">
-      <h1>REALTY</h1>
-      <h2>This is a placeholder for the logo</h2>
-      <!-- <div class="m-t-1">
+            <!-- login form -->
+            <div id="logo-box">
+                <h1>REALTY</h1>
+                <h2>This is a placeholder for the logo</h2>
+                <!-- <div class="m-t-1">
         <a class="btn btn-play btn-large" title="Kursus Oversigt" href="#">Start your journey</a>
       </div> -->
-    </div> 
+            </div>
 
-  </div>
-  <!-- 100. -->
-</div>
+        </div>
+        <!-- 100. -->
+    </div>
 
-<div id="maincontain">
-  <div id="main"></div>
+    <div id="maincontain">
+        <div id="main"></div>
 
-    <section class="section submit-ticker">
-        <p>Are you looking to sell your valuable property? Realty is your destination!</p>
+        <section class="section submit-ticker">
+            <p>Are you looking to sell your valuable property? Realty is your destination!</p>
 
-        <a route-href="route: submit">Submit your property now!</a>
-    </section>
-    <section class="section info-box">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="info-box__item">
-                        <!-- <i class="zmdi zmdi-trending-up info-box__icon"></i> -->
-                        <img src="img/icons/house.png" alt="">
-
-                        <h3>Sed posuere consectetur</h3>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                            lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+            <a route-href="route: submit">Submit your property now!</a>
+        </section>
+        <section class="section info-box">
+            <div class="container">
+                <div class="row">
+                     <div class="col-sm-4 col-md-4">
+                        <div class="info-box__item">
+                            <img src="img/happyman.png" alt="">
+                        </div>
                     </div>
-                </div>
-
-                <div class="col-sm-4">
-                    <div class="info-box__item">
-                        <!-- <i class="zmdi zmdi-search info-box__icon"></i> -->
-                        <img src="img/icons/building.png" alt="">
-
-                        <h3>Donec ullamcorper nulla</h3>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                            lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-                    </div>
-                </div>
-
-                <div class="col-sm-4">
-                    <div class="info-box__item">
-                        <!-- <i class="zmdi zmdi-globe info-box__icon"></i> -->
-                        <img src="img/icons/house (1).png" alt="">
-
-                        <h3>Integer posuere erat</h3>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                            lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-                    </div>
-                </div>
-
-                <div class="col-sm-4">
-                    <div class="info-box__item">
-                        <!-- <i class="zmdi zmdi-flower info-box__icon"></i> -->
-                        <img src="img/icons/house (2).png" alt="">
-
-                        <h3>Nulla vitae elit</h3>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                            lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-                    </div>
-                </div>
-
-                <div class="col-sm-4">
-                    <div class="info-box__item">
-                        <!-- <i class="zmdi zmdi-pin info-box__icon"></i> -->
-                        <img src="img/icons/laptop.png" alt="">
-
-                        <h3>Libero pharetra augue</h3>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                            lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-                    </div>
-                </div>
-
-                <div class="col-sm-4">
-                    <div class="info-box__item">
-                        <!-- <i class="zmdi zmdi-sun info-box__icon"></i> -->
-                        <img src="img/icons/money-bag.png" alt="">
-
-                        <h3>Aenean lacinia bibendum</h3>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
-                            lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                    <div class="col-sm-12 col-md-8">
+                        <div class="info-box__item" >
+                            <h3>Your first step to a brighter future</h3>
+                            <p>
+                                The Property Buying Company Ltd understands that we are in difficult and challenging economic times and we strive to be a
+                                company that you can rely on to help you achieve whatever your next step may be. Whether
+                                its financial freedom you desire or making sure you can secure your new home, working together
+                                we CAN help you!! The Property Buying Company Ltd are the UK’s leading property buying company.
+                                Unlike some other home &amp; property buying companies, we are not solely reliant on investors
+                                or bank funding as we also have large cash reserves to buy your property. This allows us
+                                to remain flexible and achieve industry leading prices and completion times for your property.
+                                Our underwriters have over 10 years’ experience in the property buying industry and have
+                                extensive knowledge of the national and local markets ensuring that we can offer the best
+                                possible trade price for your property. ‘If it does not work for you, it does not work for
+                                us either’ is our company motto, and we prefer to work together with you to find the right
+                                solution for your property. What are you waiting for, call 0800 024 8444 to take your first
+                                step to selling your property!
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <section class="section info-box" style="background-color:#3F51B5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-8">
+                        <div class="info-box__item">
+                            <h3 style="color:#fff">Why use us</h3>
+                            <p>
+                                <ul style="text-align:left;color:#fff">
+                                    <li>
+                                         Sell cheap, buy cheaper Looking to sell your property fast to buy another property? The Property Buying Company buys your current property allowing you to buy your discounted property.
+                                    </li>
+                                    <li>
+                                        Sell buy to let property Buy to let property you need to sell quickly? Sell it to us to clear the mortgage and release the capital.
+                                    </li>
+                                    <li>
+                                        Property part exchange buying a new property and struggling to meet builders' timescales or worried about losing out to someone in a better position?
+                                    </li>
+                                    <li>
+                                        Private house sale If you're looking for a private property sale, then The Property Buying Company can help.
+                                    </li>
+                                </ul>
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4 col-md-4">
+                        <div class="info-box__item">
+                            <img src="img/investing.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+           <section class="section info-box">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="info-box__item">
+                            <!-- <i class="zmdi zmdi-trending-up info-box__icon"></i> -->
+                            <img src="img/icons/house.png" alt="">
+
+                            <h3>Sed posuere consectetur</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
+                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="info-box__item">
+                            <!-- <i class="zmdi zmdi-search info-box__icon"></i> -->
+                            <img src="img/icons/building.png" alt="">
+
+                            <h3>Donec ullamcorper nulla</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
+                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="info-box__item">
+                            <!-- <i class="zmdi zmdi-globe info-box__icon"></i> -->
+                            <img src="img/icons/house (1).png" alt="">
+
+                            <h3>Integer posuere erat</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
+                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="info-box__item">
+                            <!-- <i class="zmdi zmdi-flower info-box__icon"></i> -->
+                            <img src="img/icons/house (2).png" alt="">
+
+                            <h3>Nulla vitae elit</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
+                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="info-box__item">
+                            <!-- <i class="zmdi zmdi-pin info-box__icon"></i> -->
+                            <img src="img/icons/laptop.png" alt="">
+
+                            <h3>Libero pharetra augue</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
+                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="info-box__item">
+                            <!-- <i class="zmdi zmdi-sun info-box__icon"></i> -->
+                            <img src="img/icons/money-bag.png" alt="">
+
+                            <h3>Aenean lacinia bibendum</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec sed odio dui. Vivamus sagittis
+                                lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 </template>
